Fix modal text overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -496,6 +496,6 @@ h2 {
   }
 
   dialog > p {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 }
